#29 Added roboelectic dependency for unit test